# session-scribe

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: bump-version.mjs
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/config/: model-selector.tsx  npc-config-editor.tsx  player-config-editor.tsx  settings-dialog.tsx
src/components/import/: file-drop-zone.tsx  import-panel.tsx  import-preview.tsx
src/components/recap/: recap-actions.tsx  recap-display.tsx  recap-panel.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  select.tsx  zoom-control.tsx
src/components/workflow/: generation-progress.tsx  index.ts  matched-badge.tsx  output-panel.tsx  parse-review-panel.tsx  phase-container.tsx  phase-summary.tsx  speaker-config-row.tsx
src/hooks/: use-config.ts  use-file-import.ts  use-models.ts  use-summarizer.ts  use-zoom.ts
src/lib/: ai.ts
src/lib/ai/: multi-pass-generator.ts  schemas.ts
src/lib/config/: config-store.ts
src/lib/export/: clipboard.ts  docx-exporter.ts
src/lib/models/: model-service.test.ts  model-service.ts
src/lib/parsers/: dice-log-parser.test.ts  dice-log-parser.ts  docx-reader.ts  index.ts  transcript-parser.test.ts  transcript-parser.ts
src/lib/prompts/: multi-pass.ts  summarize.ts  system-prompt.ts
src/types/: config.ts  dice-log.ts  index.ts  models.ts  multi-pass.ts  phase.ts  recap.ts  session.ts  transcript.ts
(+2 files in other folders)
